uat-env/uat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uat-nodejs-app
  namespace: uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uat-nodejs-app
  template:
    metadata:
      labels:
        app: uat-nodejs-app
    spec:
      containers:
        - name: uat-nodejs-app
          image: optimaltech/my-image-name
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
