uat-env/uat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uat-nodejs-svc
  namespace: uat
spec:
  selector:
    app: uat-nodejs-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
