uat-env/uat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uat-nodejs-ing
  namespace: uat
spec:
  ingressClassName: nginx
  rules:
  - host: uat.optimalgtech.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uat-nodejs-svc
            port:
              number: 80
